url updates to paper

--- a/latex/paper/checklist.tex
+++ b/latex/paper/checklist.tex
@@ -10,9 +10,12 @@
 \subsection*{Deliverables checklist}
 
 \begin{todolist}
-    \item Project report
+    \item[\done] Project report:\\
+        {\small
+        \url{https://github.com/morganwl/csci740-text-based-worlds/raw/main/text-based-worlds.pdf}}
     \item[\done]
         Github repository:\\
-        \url{https://github.com/morganwl/csci740-text-based-worlds}
+        {\small
+        \url{https://github.com/morganwl/csci740-text-based-worlds}}
     \item Poster
 \end{todolist}
